<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="technomag.newtask.NewTaskFragment" >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/task_title_text_def"
        android:id="@+id/toolbarList1"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/text_color_white"
        app:titleTextColor="@color/text_color_white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgTaskBack"
            android:src="@drawable/ic_back"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvCaption"
            android:textSize="18sp"
            android:text="@string/dialog_title"
            />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tvTaskName"
        android:text="@string/edit_hint_task_name"
        android:textColor="@color/base_text_color"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        style="@style/EditStyle"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/edit_hint_task_name"
        />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_priority"
            android:textColor="@color/base_text_color"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/tvTaskPriority"
            />

     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:orientation="horizontal"
         >

         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/priority_note"
             android:id="@+id/rbtnNote"
             android:button="@null"
             android:paddingLeft="4dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:paddingRight="4dp"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_marginRight="2dp"
             android:textColor="@drawable/rbtn_base_text_selector"
             android:background="@drawable/rbtn_note_selector"
             />

         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rbtnLow"
             android:text="@string/priority_low"
             android:textColor="@drawable/rbtn_base_text_selector"
             android:button="@null"
             android:paddingLeft="4dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:paddingRight="4dp"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_marginRight="2dp"
             android:background="@drawable/rbtn_low_selector"
             />

         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rbtnMid"
             android:text="@string/priority_middle"
             android:textColor="@drawable/rbtn_base_text_selector"
             android:button="@null"
             android:paddingLeft="4dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:paddingRight="4dp"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_marginRight="2dp"
             android:background="@drawable/rbtn_middle_selector"
             />

         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rbtnHight"
             android:text="@string/priority_hight"
             android:button="@null"
             android:paddingLeft="4dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:paddingRight="4dp"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="@drawable/rbtn_base_text_selector"
             android:background="@drawable/rbtn_hight_selector"
             />

     </RadioGroup>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/edit_hint_task_text"
        android:textColor="@color/base_text_color"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/tvTaskDescription"
        />

    <EditText
        android:id="@+id/editTaskText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:minLines="5"
        android:maxLines="5"
        android:scrollbars="vertical"
        style="@style/EditStyle"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_hint_task_text"
        android:inputType="textMultiLine"
        >

        <requestFocus />
    </EditText>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
